# perplexity_clone

./: pubspec.yaml
lib/: main.dart
lib/pages/: chat_page.dart  home_page.dart
lib/services/: chat_web_services.dart
lib/theme/: colors.dart
lib/widgets/: answer_section.dart  search_bar_button.dart  search_section.dart  side_bar.dart  side_bar_button.dart  sources_section.dart
server/: .env  README.md  config.py  main.py  pyproject.toml
server/services/: llm_service.py  search_service.py  sort_source_service.py
